--- a/linghumtest.html
+++ b/linghumtest.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>FullCanvasTileLayer</title>
     <link rel="stylesheet" href="dist/leaflet.css">
     <script type="text/javascript" src="dist/leaflet-src.js"></script>
 </head>
@@ -105,7 +105,7 @@
         },
 
         createTile: function (coords, done) {
-            var tile = document.createElement('img');     
+            var tile = document.createElement('img');
             tile.alt = '';
             tile.src = this.getTileUrl(coords);
             return tile;
@@ -150,9 +150,9 @@
     </script>
 
     <script type="text/javascript">
-    var mymap = L.map('map').setView([39.90923,116.397428], 8);
+    var mymap = L.map('map').setView([39.90923, 116.397428], 8);
     new L.CustomLayer({}).addTo(mymap);
-	L.marker([39.90923, 116.397428]).addTo(mymap)
+    L.marker([39.90923, 116.397428]).addTo(mymap)
     // L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
     //     maxZoom: 18,
     //     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
