--- a/linghumtest.html
+++ b/linghumtest.html
@@ -7,6 +7,7 @@
     <title>FullCanvasTileLayer</title>
     <link rel="stylesheet" href="dist/leaflet.css">
     <script type="text/javascript" src="dist/leaflet-src.js"></script>
+    <script type="text/javascript" src="linghuamtest.js"></script>
 </head>
 
 <body>
@@ -158,7 +159,8 @@
 
     <script type="text/javascript">
     var mymap = L.map('map').setView([39.90923, 116.397428], 8);
-    new L.CustomLayer({}).addTo(mymap);
+    // new L.CustomLayer({}).addTo(mymap);
+    new L.FullCanvasTileLayer('http://mt{num}.google.cn/vt/lyrs={lyrs}&hl=zh-CN&gl=cn&s=Gal&z={z}&x={x}&y={y}').addTo(mymap);
     L.marker([39.90923, 116.397428]).addTo(mymap)
     // L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
     //     maxZoom: 18,
