--- a/linghuam/Leaflet.draw-sector-master/index.html
+++ b/linghuam/Leaflet.draw-sector-master/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css"
 
         crossorigin=""/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css" crossorigin=""/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.9/leaflet.draw.css" crossorigin=""/>
 
     <!--
 	<link rel="stylesheet" href="../Leaflet.draw/dist/leaflet.draw.css" />
@@ -17,7 +17,8 @@
 
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js" crossorigin=""></script>
 	<script src="https://unpkg.com/leaflet-easybutton@2.0.0/src/easy-button.js"></script>
-    <script src="./example/leaflet.draw-src.js"></script>
+    <!-- <script src="./example/leaflet.draw-src.js"></script> -->
+    <script type="text/javascript" src="../Leaflet.draw-0.4.9/dist/leaflet.draw-src.js"></script>
     <script src="./example/leaflet.box.js"></script>
     <script src="./example/leaflet.arc.js"></script>
     <script src="./example/leaflet.sector.js"></script>
