--- a/linghuam/draw.sector.html
+++ b/linghuam/draw.sector.html
@@ -11,7 +11,7 @@
     <!--<script type="text/javascript" src="../dist/leaflet-src.js"></script> -->
     <script type="text/javascript" src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
     <script type="text/javascript" src="./Leaflet.draw-0.4.9/dist/leaflet.draw-src.js"></script>
-    <script type="text/javascript" src="./leaflet.sector.js"></script>    
+    <script type="text/javascript" src="./leaflet.sector.js"></script>
     <script type="text/javascript" src="./draw.sector.js"></script>
     <script type="text/javascript" src="./edit.sector.js"></script>
 </head>
@@ -47,6 +47,25 @@
 
     <script type="text/javascript">
     new L.Draw.Sector(mymap).enable();
+
+    mymap.on('draw:created', function (e) {
+        var newSector = L.sector({
+            center: e.layer.getCenter(),
+            innerRadius: e.layer.getInnerRadius(),
+            outerRadius: e.layer.getOuterRadius(),
+            startBearing: e.layer.getStartBearing(),
+            endBearing: e.layer.getEndBearing(),
+            fill: true,
+            fillColor: e.layer.options.fillColor,
+            fillOpacity: e.layer.options.fillOpacity,
+            color: e.layer.options.color,
+            opacity: e.layer.options.opacity
+        });
+
+        // newSector.editing.enable();
+
+        mymap.addLayer(e.layer);
+    });
     </script>
 </body>
 
