--- a/linghuam/draw.sector.html
+++ b/linghuam/draw.sector.html
@@ -12,7 +12,8 @@
     <!--<script type="text/javascript" src="../dist/leaflet-src.js"></script> -->
     <script type="text/javascript" src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
     <script type="text/javascript" src="./Leaflet.draw-0.4.9/dist/leaflet.draw-src.js"></script>
-    <script type="text/javascript" src="./leaflet.sector.js"></script>
+    <!-- <script type="text/javascript" src="./leaflet.sector.js"></script> -->
+    <script type="text/javascript" src="sector.js"></script>
     <script type="text/javascript" src="./draw.sector.js"></script>
     <script type="text/javascript" src="./edit.sector.js"></script>
 </head>
@@ -39,7 +40,7 @@
     // init map 
     var mymap = L.map('map', {
         center: [39.90923, 116.397428],
-        zoom: 4,
+        zoom: 8,
         worldCopyJump: true
     });
     // add layer
