--- a/linghuam/draw.sector.html
+++ b/linghuam/draw.sector.html
@@ -51,18 +51,18 @@
     new L.Draw.Sector(mymap).enable();
 
     mymap.on('draw:created', function (e) {
-        var newSector = L.sector({
-            center: e.layer.getCenter(),
-            innerRadius: e.layer.getInnerRadius(),
-            outerRadius: e.layer.getOuterRadius(),
-            startBearing: e.layer.getStartBearing(),
-            endBearing: e.layer.getEndBearing(),
-            fill: true,
-            fillColor: e.layer.options.fillColor,
-            fillOpacity: e.layer.options.fillOpacity,
-            color: e.layer.options.color,
-            opacity: e.layer.options.opacity
-        });
+        // var newSector = L.sector({
+        //     center: e.layer.getCenter(),
+        //     innerRadius: e.layer.getInnerRadius(),
+        //     outerRadius: e.layer.getOuterRadius(),
+        //     startBearing: e.layer.getStartBearing(),
+        //     endBearing: e.layer.getEndBearing(),
+        //     fill: true,
+        //     fillColor: e.layer.options.fillColor,
+        //     fillOpacity: e.layer.options.fillOpacity,
+        //     color: e.layer.options.color,
+        //     opacity: e.layer.options.opacity
+        // });
 
         // newSector.editing.enable();
 
