--- a/linghuam/sector.html
+++ b/linghuam/sector.html
@@ -43,8 +43,8 @@
     var sectorCanvas = new L.SectorCanvas();
     var sectorLayer = L.sector(L.latLng(39, 116), {
         renderer: L.sectorCanvas(),
-        startRadius: 150, // in pixels
-        endRadius: 100,
+        startRadius: 2800000, // in pixels
+        endRadius: 4000000,
         startAngle: 10, // the angle realtive to the east; between 0 and 360
         endAngle: 190,
         stroke:true,
@@ -54,10 +54,17 @@
     var sectorLayer2 = L.sector(L.latLng(30, 114), {
         renderer: L.sectorCanvas(),
         startRadius: 0, // in pixels
-        endRadius: 200,
+        endRadius: 2000000,
         startAngle: 90, // the angle realtive to the east; between 0 and 360
         endAngle: 30
     }).addTo(mymap);
+
+    setTimeout(function () {
+        sectorLayer.remove();
+    }, 4);
+    setTimeout(function () {
+        sectorLayer2.remove();
+    }, 8);
     </script>
 </body>
 
