--- a/linghuam/draw.sector.html
+++ b/linghuam/draw.sector.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./Leaflet.draw-0.4.9/dist/leaflet.draw.css">
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.7.2/jquery.js"></script>
     <!--<script type="text/javascript" src="../dist/leaflet-src.js"></script> -->
-    <script type="text/javascript" src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/leaflet@1.0.3/dist/leaflet-src.js"></script>
     <script type="text/javascript" src="./Leaflet.draw-0.4.9/dist/leaflet.draw-src.js"></script>
     <!-- <script type="text/javascript" src="./leaflet.sector.js"></script> -->
     <script type="text/javascript" src="sector.js"></script>
