--- a/linghuam/measure/index.html
+++ b/linghuam/measure/index.html
@@ -28,6 +28,7 @@
      <script src="../Proj4Leaflet-1.0.2/lib/proj4-compressed.js"></script>
     <!-- <script src="https://cdn.bootcss.com/proj4leaflet/1.0.1/proj4leaflet.min.js"></script> -->
     <script src="../Proj4Leaflet-1.0.2/src/proj4leaflet.js"></script>
+    <script src="./L.GeometryUtil.js"></script>
 
     <script src="../L.baiduLayer.js"></script>
     <link rel="stylesheet" href="./Leaflet.PolylineMeasure.css">
