--- a/linghuam/tms.html
+++ b/linghuam/tms.html
@@ -57,8 +57,8 @@
     var customTileLayer = L.TileLayer.extend({
         // getTileUrl: function (coords) {
         //     var data = {
-        //         // x: coords.x + 1706,
-        //         x: coords.x,
+        //         x: coords.x + 1706,
+        //         // x: coords.x,
         //         y: coords.y,
         //         z: this._getZoomForUrl()
         //     };
@@ -69,7 +69,7 @@
         //         }
         //         data['-y'] = invertedY;
         //     }
-        //     // data.y += 304;
+        //     data.y += 304;
         //     return L.Util.template(this._url, data);
         // },
         createTile: function (coords) {
